Mobile-view overlapping divs fix

--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,11 @@ body {
 }
 
 h1{
-    text-align: justify;
     font-size: 7.5vw !important;
     text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
 
 h2{
-    text-align: justify;
     color: cyan !important;
     opacity: 0.5;
     text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
@@ -33,7 +31,6 @@ p {
 }
 
 h3{
-    text-align: justify;
     color: gray !important;
 }
 
@@ -71,12 +68,12 @@ h5{
 
 @media only screen and (max-width: 900px) {
     .content-div {
-        padding-left: 15%;
+        padding-left: 12.5%;
     }
   }
 
   @media only screen and (max-width: 600px) {
     .content-div {
-        padding-left: 25%;
+        padding-left: 15%;
     }
   }
